# st_illumina_sample_sheet_validator

./: .codiumai.toml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-app.yml
st_nextseq_sample_sheet/: app.py  utils.py
st_nextseq_sample_sheet/assets/: nextera_xt_v2.csv
tests/: test_get_adapter.py  test_remove_special_characters.py  test_validate_sample_sheet.py
tests/assets/: sample_sheet.csv  sample_sheet_invalid_columns.csv
