[tool.poetry]
name = "st-nextseq-sample-sheet"
version = "0.1.0"
description = ""
authors = ["thanhleviet <thanh.le-viet@quadram.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.1"
pre-commit = "^3.6.2"
ruff = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
